# ChangeLog for x11-apps/ico
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/ico/ChangeLog,v 1.20 2007/12/19 23:49:47 cla Exp $

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> ico-1.0.2.ebuild:
  Stable on x86 (bug #202087)

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -ico-1.0.1.ebuild:
  Drop old ebuilds.

*ico-1.0.2 (01 Aug 2007)

  01 Aug 2007; Donnie Berkholz <dberkholz@gentoo.org>; +ico-1.0.2.ebuild:
  Bump. Manpage updates, automake 1.10 compat. Reorder keywords as ekeyword
  orders them.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; ico-1.0.1.ebuild:
  Update description to be less generic.

  20 May 2006; Robin H. Johnson <robbat2@gentoo.org> ico-1.0.1.ebuild:
  Added ~ppc after testing.

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> ico-1.0.1.ebuild:
  Added ~ppc64

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org> -ico-0.99.4.ebuild,
  -ico-1.0.0.ebuild:
  Pull old versions.

*ico-1.0.1 (23 Dec 2005)

  23 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; +ico-1.0.1.ebuild:
  Bump for 7.0.

*ico-1.0.0 (18 Dec 2005)

  18 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org> +ico-1.0.0.ebuild:
  Bump for 7.0RC4.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>; -ico-0.99.2.ebuild,
  -ico-0.99.3.ebuild:
  Pull old versions.

*ico-0.99.4 (04 Dec 2005)

  04 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org> +ico-0.99.4.ebuild:
  Bump for 7.0RC3.

*ico-0.99.3 (11 Nov 2005)

  11 Nov 2005; Joshua Baergen <joshuabaergen@gentoo.org> +ico-0.99.3.ebuild:
  Bump for 7.0RC2.

  31 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>; -ico-0.99.0.ebuild,
  -ico-0.99.1_pre20050905.ebuild:
  Pull old versions.

*ico-0.99.2 (20 Oct 2005)

  20 Oct 2005; Donnie Berkholz <spyderous@gentoo.org>; +ico-0.99.2.ebuild:
  Bump for 7.0 RC1.

  09 Sep 2005; Donnie Berkholz <spyderous@gentoo.org>; +metadata.xml:
  Add metadata.
