@@ -1,5 +1,5 @@
 AUX ico-1.0.2-winnt.patch 1116 RMD160 475357d68e07cd9a5bbef270007ca41af28ef4e8 SHA1 c2f6ecbdd41b7a3d484340b8530a6d1f434d56fb SHA256 5ce0267728ca1d6f56fe6a9de7d1acb7d79728042d4fa81822bac8bc6afe42bc
 DIST ico-1.0.2.tar.bz2 97445 RMD160 1da19b7c31afdaa3411f9368b0de95b85b1d5f49 SHA1 64940e202d8d53b6c036ad17bc5af9f4823f7fb0 SHA256 db2e96e18a2bcc29b91b9de7b758a7c67cebee27772fb540c44c7bc2c2218aa5
-EBUILD ico-1.0.2.ebuild 490 RMD160 9a7119a42477bf54568743acaefb60ecdd90572b SHA1 4fc73f8150864b7e16759e182c12ba6a6f8ebf6d SHA256 d2ed773fc3b85fdecb6a89e7aad20174a2f4841e1dccd905a6eb07d28e92cdb1
-MISC ChangeLog 2637 RMD160 956fd00d465277c7b14621de65b95a082d93d43b SHA1 105f55de6050a2799cec2fcf21985d21370af7b5 SHA256 1a95e7514570c4514080e2820b121897b64e06054ac36b1b57695352b14188b8
+EBUILD ico-1.0.2.ebuild 497 RMD160 7c6ade7684682f2ab45b1383be06aae04d94a129 SHA1 95ee71a9f19fc7b1388f559c23f9337352376492 SHA256 1429ef9da8939cb7f33994046ae7b2e506ac4f10e39d71d8557399907f9adc2d
+MISC ChangeLog 2736 RMD160 07955177bbeb347d560354ed2d4c188be7fde0d5 SHA1 1a854ec9a15e16491684ff5f11e4f1ed0a85a513 SHA256 c0d642d370525d7b58256a2a3b171f30ae4c2f1654f52f9b9c7f54f6f1e2061f
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
